<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCuisine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="textView_1">it takes </string>
    <string name="textView_2"> minutes to prepare</string>
    <string name="textView_3">and has </string>
    <string name="textView_4"> servings.</string>
    <string name="textView_5">     Set as draft. (unfinished)</string>
    <string name="title_activity_splash_screen">MyCuisine</string>

    <!-- changes here -->
    <string-array name="sort_array">
        <item>Category</item>
        <item>Main Dishes</item>
        <item>Appetizers, Beverages</item>
        <item>Breads, Rolls</item>
        <item>Soups, Salads</item>
        <item>Desserts</item>
        <item>Vegetables, Side Dishes</item>
        <item>Cookies, Candy</item>
        <item>This, That</item>
    </string-array> <!-- till here -->
    <string-array name="fraction_array">
        <item>fraction</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
    </string-array>
    <string-array name="unit_array">
        <item>unit</item>
        <item>bunch</item>
        <item>box</item>
        <item>can</item>
        <item>clove</item>
        <item>cup</item>
        <item>dash</item>
    </string-array>
    <string-array name="use_deafult_array">
        <item>Don\'t group this ingredient. Use default.</item>
        <item>Add a new group </item>
    </string-array>

</resources>